--- a/index.html
+++ b/index.html
@@ -253,77 +253,77 @@
         <div class="rounds">Round 1</div>
         <div class="teams">
           <span class="game1_time" id="game_time">0</span>
-          <span class="game1_home" id="home">Arsenal</span>
+          <span class="team_no1" id="home">Arsenal</span>
           <span class="game1_home_score" id="home_score">0</span>
-          <span class="game1_guest" id="guest">Aston Villa</span>
+          <span class="team_no2" id="guest">Aston Villa</span>
           <span class="game1_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game2_time" id="game_time">0</span>
-          <span class="game2_home" id="home">Bournemouth</span>
+          <span class="team_no3" id="home">Bournemouth</span>
           <span class="game2_home_score" id="home_score">0</span>
-          <span class="game2_guest" id="guest">Brentford</span>
+          <span class="team_no4" id="guest">Brentford</span>
           <span class="game2_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game3_time" id="game_time">0</span>
-          <span class="game3_home" id="home">Brighton</span>
+          <span class="team_no5" id="home">Brighton</span>
           <span class="game3_home_score" id="home_score">0</span>
-          <span class="game3_guest" id="guest">Chelsea</span>
+          <span class="team_no6" id="guest">Chelsea</span>
           <span class="game3_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game4_time" id="game_time">0</span>
-          <span class="game4_home" id="home">Crystal Palace</span>
+          <span class="team_no7" id="home">Crystal Palace</span>
           <span class="game4_home_score" id="home_score">0</span>
-          <span class="game4_guest" id="guest">Everton</span>
+          <span class="team_no8" id="guest">Everton</span>
           <span class="game4_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game5_time" id="game_time">0</span>
-          <span class="game5_home" id="home">Fulham</span>
+          <span class="team_no9" id="home">Fulham</span>
           <span class="game5_home_score" id="home_score">0</span>
-          <span class="game5_guest" id="guest">Leeds</span>
+          <span class="team_no10" id="guest">Leeds</span>
           <span class="game5_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game6_time" id="game_time">0</span>
-          <span class="game6_home" id="home">Leicester</span>
+          <span class="team_no11" id="home">Leicester</span>
           <span class="game6_home_score" id="home_score">0</span>
-          <span class="game6_guest" id="guest">Liverpool</span>
+          <span class="team_no12" id="guest">Liverpool</span>
           <span class="game6_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game7_time" id="game_time">0</span>
-          <span class="game7_home" id="home">Manchester City</span>
+          <span class="team_no13" id="home">Manchester City</span>
           <span class="game7_home_score" id="home_score">0</span>
-          <span class="game7_guest" id="guest">Manchester United</span>
+          <span class="team_no14" id="guest">Manchester United</span>
           <span class="game7_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game8_time" id="game_time">0</span>
-          <span class="game8_home" id="home">Newcastle</span>
+          <span class="team_no15" id="home">Newcastle</span>
           <span class="game8_home_score" id="home_score">0</span>
-          <span class="game8_guest" id="guest">Nottingham</span>
+          <span class="team_no16" id="guest">Nottingham</span>
           <span class="game8_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game9_time" id="game_time">0</span>
-          <span class="game9_home" id="home">Southampton</span>
+          <span class="team_no17" id="home">Southampton</span>
           <span class="game9_home_score" id="home_score">0</span>
-          <span class="game9_guest" id="guest">Tottenham</span>
+          <span class="team_no18" id="guest">Tottenham</span>
           <span class="game9_guest_score" id="guest_score">0</span>
         </div>
         <div class="teams">
           <span class="game10_time" id="game_time">0</span>
-          <span class="game10_home" id="home">West Ham</span>
+          <span class="team_no19" id="home">West Ham</span>
           <span class="game10_home_score" id="home_score">0</span>
-          <span class="game10_guest" id="guest">Wolverhampton</span>
+          <span class="team_no20" id="guest">Wolverhampton</span>
           <span class="game10_guest_score" id="guest_score">0</span>
         </div>
         <div class="start_clear">
           <button class="start_games">Play</button>
-          <button class="clear_results">Clear</button>
+          <button class="clear_results">Restart</button>
           <button class="next_round">Next Round</button>
         </div>
       </div>
