Schedule and JSON's added

--- a/index.html
+++ b/index.html
@@ -252,79 +252,88 @@
       <div class="games">
         <div class="rounds">Round 1</div>
         <div class="teams">
-          <span class="game1_time" id="game_time">0</span>
-          <span class="team_no1" id="home">Arsenal</span>
-          <span class="game1_home_score" id="home_score">0</span>
-          <span class="team_no2" id="guest">Aston Villa</span>
-          <span class="game1_guest_score" id="guest_score">0</span>
+          <span class="game1_time" id="game_time_day">----</span>
+          <span class="team_no1" id="home"></span>
+          <span class="game1_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no2" id="guest"></span>
+          <span class="game1_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game2_time" id="game_time">0</span>
-          <span class="team_no3" id="home">Bournemouth</span>
-          <span class="game2_home_score" id="home_score">0</span>
-          <span class="team_no4" id="guest">Brentford</span>
-          <span class="game2_guest_score" id="guest_score">0</span>
+          <span class="game2_time" id="game_time_day">----</span>
+          <span class="team_no3" id="home"></span>
+          <span class="game2_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no4" id="guest"></span>
+          <span class="game2_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game3_time" id="game_time">0</span>
-          <span class="team_no5" id="home">Brighton</span>
-          <span class="game3_home_score" id="home_score">0</span>
-          <span class="team_no6" id="guest">Chelsea</span>
-          <span class="game3_guest_score" id="guest_score">0</span>
+          <span class="game3_time" id="game_time_day">----</span>
+          <span class="team_no5" id="home"></span>
+          <span class="game3_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no6" id="guest"></span>
+          <span class="game3_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game4_time" id="game_time">0</span>
-          <span class="team_no7" id="home">Crystal Palace</span>
-          <span class="game4_home_score" id="home_score">0</span>
-          <span class="team_no8" id="guest">Everton</span>
-          <span class="game4_guest_score" id="guest_score">0</span>
+          <span class="game4_time" id="game_time_day">----</span>
+          <span class="team_no7" id="home"></span>
+          <span class="game4_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no8" id="guest"></span>
+          <span class="game4_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game5_time" id="game_time">0</span>
-          <span class="team_no9" id="home">Fulham</span>
-          <span class="game5_home_score" id="home_score">0</span>
-          <span class="team_no10" id="guest">Leeds</span>
-          <span class="game5_guest_score" id="guest_score">0</span>
+          <span class="game5_time" id="game_time_day">----</span>
+          <span class="team_no9" id="home"></span>
+          <span class="game5_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no10" id="guest"></span>
+          <span class="game5_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game6_time" id="game_time">0</span>
-          <span class="team_no11" id="home">Leicester</span>
-          <span class="game6_home_score" id="home_score">0</span>
-          <span class="team_no12" id="guest">Liverpool</span>
-          <span class="game6_guest_score" id="guest_score">0</span>
+          <span class="game6_time" id="game_time_day">----</span>
+          <span class="team_no11" id="home"></span>
+          <span class="game6_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no12" id="guest"></span>
+          <span class="game6_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game7_time" id="game_time">0</span>
-          <span class="team_no13" id="home">Manchester City</span>
-          <span class="game7_home_score" id="home_score">0</span>
-          <span class="team_no14" id="guest">Manchester United</span>
-          <span class="game7_guest_score" id="guest_score">0</span>
+          <span class="game7_time" id="game_time_day">----</span>
+          <span class="team_no13" id="home"></span>
+          <span class="game7_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no14" id="guest"></span>
+          <span class="game7_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game8_time" id="game_time">0</span>
-          <span class="team_no15" id="home">Newcastle</span>
-          <span class="game8_home_score" id="home_score">0</span>
-          <span class="team_no16" id="guest">Nottingham</span>
-          <span class="game8_guest_score" id="guest_score">0</span>
+          <span class="game8_time" id="game_time_day">----</span>
+          <span class="team_no15" id="home"></span>
+          <span class="game8_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no16" id="guest"></span>
+          <span class="game8_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game9_time" id="game_time">0</span>
-          <span class="team_no17" id="home">Southampton</span>
-          <span class="game9_home_score" id="home_score">0</span>
-          <span class="team_no18" id="guest">Tottenham</span>
-          <span class="game9_guest_score" id="guest_score">0</span>
+          <span class="game9_time" id="game_time_day">----</span>
+          <span class="team_no17" id="home"></span>
+          <span class="game9_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no18" id="guest"></span>
+          <span class="game9_guest_score" id="guest_score"></span>
         </div>
         <div class="teams">
-          <span class="game10_time" id="game_time">0</span>
-          <span class="team_no19" id="home">West Ham</span>
-          <span class="game10_home_score" id="home_score">0</span>
-          <span class="team_no20" id="guest">Wolverhampton</span>
-          <span class="game10_guest_score" id="guest_score">0</span>
+          <span class="game10_time" id="game_time_day">----</span>
+          <span class="team_no19" id="home"></span>
+          <span class="game10_home_score" id="home_score"></span>
+          <span class="game1_time" id="game_time_hour">----</span>
+          <span class="team_no20" id="guest"></span>
+          <span class="game10_guest_score" id="guest_score"></span>
         </div>
         <div class="start_clear">
-          <button class="start_games">Play</button>
+          <button class="start_games" id="play">Play</button>
           <button class="clear_results">Restart</button>
-          <button class="next_round">Next Round</button>
         </div>
       </div>
     </div>
