Sorting algorithm update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <span class="standings_wins">W</span>
           <span class="standings_draws">D</span>
           <span class="standings_lost">L</span>
-          <span class="standings_goals">GA</span>
+          <span class="standings_goalsFor">GF</span>
+          <span class="standings_goalsAgainst">GA</span>
           <span class="standings_points">P</span>
         </div>
         <div class="standings_no1" id="standings_details">
@@ -37,7 +38,10 @@
           <span class="standings_no1_wins" id="standings_wins">0</span>
           <span class="standings_no1_draws" id="standings_draws">0</span>
           <span class="standings_no1_lost" id="standings_lost">0</span>
-          <span class="standings_no1_goals" id="standings_goals">0-0</span>
+          <span class="standings_no1_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no1_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no1_points" id="standings_points">0</span>
         </div>
         <div class="standings_no2" id="standings_details">
@@ -47,7 +51,10 @@
           <span class="standings_no2_wins" id="standings_wins">0</span>
           <span class="standings_no2_draws" id="standings_draws">0</span>
           <span class="standings_no2_lost" id="standings_lost">0</span>
-          <span class="standings_no2_goals" id="standings_goals">0-0</span>
+          <span class="standings_no2_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no2_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no2_points" id="standings_points">0</span>
         </div>
         <div class="standings_no3" id="standings_details">
@@ -57,7 +64,10 @@
           <span class="standings_no3_wins" id="standings_wins">0</span>
           <span class="standings_no3_draws" id="standings_draws">0</span>
           <span class="standings_no3_lost" id="standings_lost">0</span>
-          <span class="standings_no3_goals" id="standings_goals">0-0</span>
+          <span class="standings_no3_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no3_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no3_points" id="standings_points">0</span>
         </div>
         <div class="standings_no4" id="standings_details">
@@ -67,7 +77,10 @@
           <span class="standings_no4_wins" id="standings_wins">0</span>
           <span class="standings_no4_draws" id="standings_draws">0</span>
           <span class="standings_no4_lost" id="standings_lost">0</span>
-          <span class="standings_no4_goals" id="standings_goals">0-0</span>
+          <span class="standings_no4_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no4_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no4_points" id="standings_points">0</span>
         </div>
         <div class="standings_no5" id="standings_details">
@@ -77,7 +90,10 @@
           <span class="standings_no5_wins" id="standings_wins">0</span>
           <span class="standings_no5_draws" id="standings_draws">0</span>
           <span class="standings_no5_lost" id="standings_lost">0</span>
-          <span class="standings_no5_goals" id="standings_goals">0-0</span>
+          <span class="standings_no5_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no5_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no5_points" id="standings_points">0</span>
         </div>
         <div class="standings_no6" id="standings_details">
@@ -87,7 +103,10 @@
           <span class="standings_no6_wins" id="standings_wins">0</span>
           <span class="standings_no6_draws" id="standings_draws">0</span>
           <span class="standings_no6_lost" id="standings_lost">0</span>
-          <span class="standings_no6_goals" id="standings_goals">0-0</span>
+          <span class="standings_no6_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no6_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no6_points" id="standings_points">0</span>
         </div>
         <div class="standings_no7" id="standings_details">
@@ -97,7 +116,10 @@
           <span class="standings_no7_wins" id="standings_wins">0</span>
           <span class="standings_no7_draws" id="standings_draws">0</span>
           <span class="standings_no7_lost" id="standings_lost">0</span>
-          <span class="standings_no7_goals" id="standings_goals">0-0</span>
+          <span class="standings_no7_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no7_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no7_points" id="standings_points">0</span>
         </div>
         <div class="standings_no8" id="standings_details">
@@ -107,7 +129,10 @@
           <span class="standings_no8_wins" id="standings_wins">0</span>
           <span class="standings_no8_draws" id="standings_draws">0</span>
           <span class="standings_no8_lost" id="standings_lost">0</span>
-          <span class="standings_no8_goals" id="standings_goals">0-0</span>
+          <span class="standings_no8_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no8_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no8_points" id="standings_points">0</span>
         </div>
         <div class="standings_no9" id="standings_details">
@@ -117,7 +142,10 @@
           <span class="standings_no9_wins" id="standings_wins">0</span>
           <span class="standings_no9_draws" id="standings_draws">0</span>
           <span class="standings_no9_lost" id="standings_lost">0</span>
-          <span class="standings_no9_goals" id="standings_goals">0-0</span>
+          <span class="standings_no9_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no9_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no9_points" id="standings_points">0</span>
         </div>
         <div class="standings_no10" id="standings_details">
@@ -127,7 +155,10 @@
           <span class="standings_no10_wins" id="standings_wins">0</span>
           <span class="standings_no10_draws" id="standings_draws">0</span>
           <span class="standings_no10_lost" id="standings_lost">0</span>
-          <span class="standings_no10_goals" id="standings_goals">0-0</span>
+          <span class="standings_no10_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no10_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no10_points" id="standings_points">0</span>
         </div>
         <div class="standings_no11" id="standings_details">
@@ -137,7 +168,10 @@
           <span class="standings_no11_wins" id="standings_wins">0</span>
           <span class="standings_no11_draws" id="standings_draws">0</span>
           <span class="standings_no11_lost" id="standings_lost">0</span>
-          <span class="standings_no11_goals" id="standings_goals">0-0</span>
+          <span class="standings_no11_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no11_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no11_points" id="standings_points">0</span>
         </div>
         <div class="standings_no12" id="standings_details">
@@ -147,7 +181,10 @@
           <span class="standings_no12_wins" id="standings_wins">0</span>
           <span class="standings_no12_draws" id="standings_draws">0</span>
           <span class="standings_no12_lost" id="standings_lost">0</span>
-          <span class="standings_no12_goals" id="standings_goals">0-0</span>
+          <span class="standings_no12_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no12_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no12_points" id="standings_points">0</span>
         </div>
         <div class="standings_no13" id="standings_details">
@@ -157,7 +194,10 @@
           <span class="standings_no13_wins" id="standings_wins">0</span>
           <span class="standings_no13_draws" id="standings_draws">0</span>
           <span class="standings_no13_lost" id="standings_lost">0</span>
-          <span class="standings_no13_goals" id="standings_goals">0-0</span>
+          <span class="standings_no13_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no13_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no13_points" id="standings_points">0</span>
         </div>
         <div class="standings_no14" id="standings_details">
@@ -167,7 +207,10 @@
           <span class="standings_no14_wins" id="standings_wins">0</span>
           <span class="standings_no14_draws" id="standings_draws">0</span>
           <span class="standings_no14_lost" id="standings_lost">0</span>
-          <span class="standings_no14_goals" id="standings_goals">0-0</span>
+          <span class="standings_no14_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no14_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no14_points" id="standings_points">0</span>
         </div>
         <div class="standings_no15" id="standings_details">
@@ -177,7 +220,10 @@
           <span class="standings_no15_wins" id="standings_wins">0</span>
           <span class="standings_no15_draws" id="standings_draws">0</span>
           <span class="standings_no15_lost" id="standings_lost">0</span>
-          <span class="standings_no15_goals" id="standings_goals">0-0</span>
+          <span class="standings_no15_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no15_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no15_points" id="standings_points">0</span>
         </div>
         <div class="standings_no16" id="standings_details">
@@ -187,7 +233,10 @@
           <span class="standings_no16_wins" id="standings_wins">0</span>
           <span class="standings_no16_draws" id="standings_draws">0</span>
           <span class="standings_no16_lost" id="standings_lost">0</span>
-          <span class="standings_no16_goals" id="standings_goals">0-0</span>
+          <span class="standings_no16_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no16_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no16_points" id="standings_points">0</span>
         </div>
         <div class="standings_no17" id="standings_details">
@@ -197,7 +246,10 @@
           <span class="standings_no17_wins" id="standings_wins">0</span>
           <span class="standings_no17_draws" id="standings_draws">0</span>
           <span class="standings_no17_lost" id="standings_lost">0</span>
-          <span class="standings_no17_goals" id="standings_goals">0-0</span>
+          <span class="standings_no17_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no17_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no17_points" id="standings_points">0</span>
         </div>
         <div class="standings_no18" id="standings_details">
@@ -207,7 +259,10 @@
           <span class="standings_no18_wins" id="standings_wins">0</span>
           <span class="standings_no18_draws" id="standings_draws">0</span>
           <span class="standings_no18_lost" id="standings_lost">0</span>
-          <span class="standings_no18_goals" id="standings_goals">0-0</span>
+          <span class="standings_no18_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no18_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no18_points" id="standings_points">0</span>
         </div>
         <div class="standings_no19" id="standings_details">
@@ -217,7 +272,10 @@
           <span class="standings_no19_wins" id="standings_wins">0</span>
           <span class="standings_no19_draws" id="standings_draws">0</span>
           <span class="standings_no19_lost" id="standings_lost">0</span>
-          <span class="standings_no19_goals" id="standings_goals">0-0</span>
+          <span class="standings_no19_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no19_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no19_points" id="standings_points">0</span>
         </div>
         <div class="standings_no20" id="standings_details">
@@ -227,7 +285,10 @@
           <span class="standings_no20_wins" id="standings_wins">0</span>
           <span class="standings_no20_draws" id="standings_draws">0</span>
           <span class="standings_no20_lost" id="standings_lost">0</span>
-          <span class="standings_no20_goals" id="standings_goals">0-0</span>
+          <span class="standings_no20_goalsFor" id="standings_goalsFor">0</span>
+          <span class="standings_no20_goalsAgainst" id="standings_goalsAgainst"
+            >0</span
+          >
           <span class="standings_no20_points" id="standings_points">0</span>
         </div>
       </div>
