Algorithms for calculating/sorting finished

--- a/index.html
+++ b/index.html
@@ -377,13 +377,14 @@
         <div class="start_clear">
           <button class="start_games" id="play">Play</button>
           <button class="clear_results">Restart</button>
+          <button class="final_results">Results</button>
         </div>
       </div>
     </div>
-    <div class="winner">
+    <!-- <div class="winner">
       <div class="modal"></div>
       <button class="modal_close">Close</button>
-    </div>
+    </div> -->
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
