App made fully responsive

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="start_clear">
           <button class="start_games" id="play">Play</button>
           <button class="clear_results">Restart</button>
-          <button class="final_results">Results</button>
+          <button class="final_results">See results</button>
         </div>
       </div>
     </div>
